translation-tool/inputs/source_meta/objects/HNSCASEESCDESCVIEW__x.object
<CustomObject>
    <description>HNSCASEESCDESCVIEW</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNSCASEESCDESCVIEW</externalName>
    <fields>
        <fullName>ACTION__c</fullName>
        <description>ACTION</description>
        <externalDeveloperName>ACTION</externalDeveloperName>
        <label>Action</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDED_BY__c</fullName>
        <description>ADDED_BY</description>
        <externalDeveloperName>ADDED_BY</externalDeveloperName>
        <label>ADDED_BY</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>BUSINESS_UNIT</description>
        <externalDeveloperName>BUSINESS_UNIT</externalDeveloperName>
        <label>BUSINESS_UNIT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ESC_SEQ__c</fullName>
        <description>CASE_ESC_SEQ</description>
        <externalDeveloperName>CASE_ESC_SEQ</externalDeveloperName>
        <label>CASE_ESC_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>CASE_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATETIME_ADDED__c</fullName>
        <description>DATETIME_ADDED</description>
        <externalDeveloperName>DATETIME_ADDED</externalDeveloperName>
        <label>DATETIME_ADDED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_AGENT_GROUP__c</fullName>
        <description>FROM_AGENT_GROUP</description>
        <externalDeveloperName>FROM_AGENT_GROUP</externalDeveloperName>
        <label>From Agent Group</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_AGENT__c</fullName>
        <description>FROM_AGENT</description>
        <externalDeveloperName>FROM_AGENT</externalDeveloperName>
        <label>From Agent Assigned</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASTMANT_BY__c</fullName>
        <description>LASTMANT_BY</description>
        <externalDeveloperName>LASTMANT_BY</externalDeveloperName>
        <label>LASTMANT_BY</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASTMANT_DTTM__c</fullName>
        <description>LASTMANT_DTTM</description>
        <externalDeveloperName>LASTMANT_DTTM</externalDeveloperName>
        <label>LASTMANT_DTTM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REASON_DETAIL__c</fullName>
        <description>REASON_DETAIL</description>
        <externalDeveloperName>REASON_DETAIL</externalDeveloperName>
        <label>Reason detail</label>
        <length>762</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REASON__c</fullName>
        <description>REASON</description>
        <externalDeveloperName>REASON</externalDeveloperName>
        <label>Reason</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_AGENT_GROUP__c</fullName>
        <description>TO_AGENT_GROUP</description>
        <externalDeveloperName>TO_AGENT_GROUP</externalDeveloperName>
        <label>To Agent Group</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_AGENT__c</fullName>
        <description>TO_AGENT</description>
        <externalDeveloperName>TO_AGENT</externalDeveloperName>
        <label>To Agent Assigned</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>HNSCASEESCDESCVIEW</label>
    <pluralLabel>HNSCASEESCDESCVIEW</pluralLabel>
</CustomObject>